💄 fix(main): z-index

--- a/src/components/Cursor/Cursor.scss
+++ b/src/components/Cursor/Cursor.scss
@@ -8,7 +8,7 @@
 	width: fit-content;
 	transform: translate(-50%, -50%);
 	pointer-events: none;
-	z-index: 999;
+	z-index: 200;
 
 	.cursor-dot {
 		pointer-events: none;
