--- a/src/scss/_headers.scss
+++ b/src/scss/_headers.scss
@@ -6,6 +6,7 @@ h2,
 	font-size: fs('huge');
 	font-weight: 500;
 	margin: 0;
+	z-index: 100;
 }
 
 h3,
@@ -14,6 +15,7 @@ h3,
 	font-size: fs('x-big');
 	font-weight: 500;
 	margin: 0;
+	z-index: 100;
 }
 
 h4,
@@ -22,6 +24,7 @@ h4,
 	font-size: fs('big');
 	font-weight: 500;
 	margin: 0;
+	z-index: 100;
 }
 
 h5,
@@ -30,6 +33,7 @@ h5,
 	font-size: fs('normal');
 	font-weight: 500;
 	margin: 0;
+	z-index: 100;
 }
 
 h6,
@@ -38,4 +42,5 @@ h6,
 	font-size: fs('x-small');
 	font-weight: 500;
 	margin: 0;
+	z-index: 100;
 }
