--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -1,16 +1,19 @@
 p {
 	font-size: fs('normal');
 	margin: 0;
+	z-index: 100;
 }
 
 small {
 	font-size: fs('small');
 	margin: 0;
+	z-index: 100;
 }
 
 big {
 	font-size: fs('x-normal');
 	margin: 0;
+	z-index: 100;
 }
 
 ul,
@@ -19,9 +22,11 @@ li {
 	padding: 0;
 	margin: 0;
 	display: inherit;
+	z-index: 100;
 }
 
 a {
 	color: inherit;
 	text-decoration: none;
+	z-index: 100;
 }
