--- a/src/views/Project/Project.scss
+++ b/src/views/Project/Project.scss
@@ -121,7 +121,7 @@
 			width: 100%;
 			flex: 1;
 			padding: 0 0.75rem;
-			z-index: 1;
+			z-index: 10;
 
 			img {
 				border-radius: 12px;
